--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("/chat.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
